= Jason release notes
:toc: right

ifdef::env-github[:outfilesuffix: .adoc]

== version 2.6

- the functor of plan labels can be omitted, as in `@[atomic] +!g <- a`. In this case, as usual, a new unique label functor is defined by the interpreter.
- new tests framework implemented in Jason (see src/test/jason/asl and doc/tech/unit-tests), contribution of Cleber Amaral.
- new internal action `.intention` used to inspect the state of intentions. It replaces `.current_intention`.
- new internal action `.set_random_seed`, contribution of Timotheus Kampik.
- internal action `.stopMAS` has a new (optional) argument for exit value.
- add option `--log-conf` to setup the logging configuration file when launching the application.
- revision of goal states reported in meta events and used in .desire and .intend. See doc/tech/goal-states.pdf for more details.

== version 2.5 (2020-06-25)

- cascading failures of failures (see FAQ)
- new internal actions to manipulate a Java Set. In Jason, it is represented by a variable. Example:
+
----
.set.add(S,a);                 // S = {a}
.set.add_all(S,[5,b,p(2),a]);  // S = {5,a,b,p(2)}
.set.remove(S,b);              // S = {5,a,p(2)}
.set.union(S,[a,1]);           // S = {1,5,a,p(2)}
.length(S,X);                  // X = 4
.set.difference(S,[1,a]);      // S = {5,p(2)}
.findall(K, .member(K,S), LL)  // LL = [5,p(2)]
.set.add(V,5);
.set.intersection(S,V);        // S = {5}
.set.clear(S);                 // S = {}
// iteration
for ( .member(V,S) ) {
   .print(K,V);
}.
----

- new internal actions to manipulate a Java Map. In Jason, it is represented by a variable. Example:
+
----
.map.put(M,a,10);                // M = {a->10}
.map.put(M,b,ok);                // M = {a->10, b->ok}
.map.put(M,a,20);                // M = {a->20, b->ok}
.length(M,X);                    // X = 2
.map.key(M,a)                    // true
.map.key(M,V)                    // unifies V with all keys of M
.map.value(M,10)                 // true